# tungsten

./: .gitmodules  AGENTS.md  Cargo.toml  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  check.yml  push.yml
.zed/: debug.json
crates/client/: Cargo.toml
crates/client/src/: client.rs  messenger.rs  settings.rs
crates/config/: Cargo.toml
crates/config/src/: app.rs  config.rs  error.rs  file.rs  path.rs
crates/core/: Cargo.toml
crates/core/src/: core.rs  error.rs  model.rs  queue.rs  store.rs  transfer.rs
crates/core/src/queue/: api.rs  coordinator.rs  files.rs  lifecycle.rs  progress.rs  scheduler.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: daemon.rs  main.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: app.rs  assets.rs  components.rs  main.rs  paths.rs  preferences.rs  settings.rs
crates/gui/src/components/: dialog.rs  titlebar.rs
crates/gui/src/components/dialog/: about.rs  queue.rs  settings.rs  speed.rs
crates/gui/src/views/: root.rs
crates/gui/src/views/root/: records.rs  settings.rs  topbar.rs
crates/gui/src/views/root/records/: explorer.rs  format.rs  menu.rs  table.rs
crates/io/: Cargo.toml
crates/io/src/: disk.rs  fs.rs  io.rs  writer.rs
crates/io/src/disk/: codec.rs  db.rs  tests.rs
crates/io/src/fs/: chunk.rs  error.rs  local.rs
crates/io/src/writer/: error.rs  multi.rs  single.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  ipc.rs
crates/net/: Cargo.toml
crates/net/src/: backend.rs  error.rs  model.rs  net.rs  queue.rs  state.rs  store.rs  transfer.rs  transport.rs  types.rs
crates/net/src/backend/: multipart.rs  tests.rs
crates/net/src/queue/: api.rs  files.rs  lifecycle.rs  persist.rs  runtime.rs  scheduler.rs  shared.rs  tests.rs
crates/net/src/transfer/: limit.rs  multipart.rs  single.rs  temp.rs  tests.rs
crates/net/src/transport/: limit.rs  multipart.rs  single.rs  speed.rs  temp.rs  tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: runtime.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/service/: Cargo.toml
crates/service/src/: main.rs  service.rs
crates/tray/: Cargo.toml
crates/tray/src/: tray.rs
