[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2024"
authors = ["Ruri"]
description = "yet another downloader"

[workspace.dependencies]
anyhow = "1"
gpui = "0.2.2"
gpui-component = "0.5.1"
thiserror = "2.0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
