[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2024"
authors = ["Ruri"]
description = "yet another downloader"

[workspace.dependencies]
tungsten-net = { path = "crates/net" }
tungsten-io = { path = "crates/io" }

anyhow = "1"
gpui = "0.2"
gpui-component = "0.5"
hex = "0.4"
opener = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
