[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["vendor/gpui-component"]

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2024"
authors = ["Ruri <ruri@lithionite.org>"]
description = "yet another downloader"

[workspace.dependencies]
tungsten-net = { path = "crates/net" }
tungsten-io = { path = "crates/io" }

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { path = "vendor/gpui-component/crates/ui" }
hex = "0.4"
opener = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.9"
