[package]
name = "tungsten-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
path = "src/client.rs"

[dependencies]
anyhow.workspace = true
tungsten-config.workspace = true
tungsten-core.workspace = true
tungsten-ipc.workspace = true
