[package]
name = "tungsten-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
path = "src/config.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tungsten-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
