[package]
name = "tungsten-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
path = "src/core.rs"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
