[package]
name = "tungsten-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
path = "src/daemon.rs"

[dependencies]
tungsten-ipc.workspace = true
tungsten-runtime.workspace = true
anyhow.workspace = true
interprocess.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
