[package]
name = "tungsten-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "tungsten"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
regex.workspace = true
thiserror.workspace = true
tungsten-net.workspace = true
tungsten-io.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opener.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
