[package]
name = "tungsten-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "tungsten"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
gpui-component.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
opener.workspace = true
rust-embed.workspace = true
serde.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tungsten-client.workspace = true
tungsten-config.workspace = true
tungsten-tray.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
winresource = "0.1"
