[package]
name = "tungsten-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
path = "src/io.rs"

[dependencies]
thiserror.workspace = true
rusqlite.workspace = true
tungsten-core.workspace = true
tungsten-net.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
