[package]
name = "tungsten-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
path = "src/net.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
