[package]
name = "tungsten-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
path = "src/net.rs"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tungsten-core.workspace = true
tungsten-io.workspace = true

[dev-dependencies]
tempfile.workspace = true
