[package]
name = "tungsten-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
