[package]
name = "tungsten-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
path = "src/service.rs"

[dependencies]
tungsten-config.workspace = true
tungsten-ipc.workspace = true
tungsten-runtime.workspace = true
anyhow.workspace = true
interprocess.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
