[package]
name = "tungsten-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
path = "src/tray.rs"

[dependencies]
anyhow.workspace = true
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
image = { version = "0.25", default-features = false, features = ["ico"] }
tray-icon = "0.21.3"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
